Opened 16 years ago
Closed 16 years ago
#1915 closed bug (fixed)
Open With does not display candidate apps in the correct order
Reported by: | ajsmale | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Tracker | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
In Tracker, navigate to the artwork folder and select one of the png files. Use File->Open With enter the Open With window.
The order of the candidate applications is backwards, the preferred application (ShowImage) should be the first item, not the last.
Clicking on the Relation attribute title puts the list into the correct order.
Tested in VMWare hrev24361
Attachments (1)
Change History (3)
by , 16 years ago
Attachment: | Screen.png added |
---|
comment:1 by , 16 years ago
Component: | - General → Applications/Tracker |
---|
hrev22113 not only fixed a bug in the comparison functions, it accidently also reverted the sorting order. I'll have a look.
Note:
See TracTickets
for help on using tickets.
Screen grab showing the incorrect ordering of candidate apps