* Changed the sorting order back to how it was done previously to r22113. * This fixes bug #1915.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24396 a95241bf-73f2-0310-859d-f6bbb57e9c96